--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflixreact",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://munbc.github.io/git-react-MBC-",
+  "homepage": "https://Munbc.github.io/react_netflix/index.html",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
